# aerospike-asio

./: CMakeDependencies.txt  CMakeLists.txt  README.md  build_linux.sh  linux_setup_3rd_part.sh  rebuild_win64_vc12.bat  windows_x64_vc12_setup_3rd_part.bat
aerospike_asio/: aerospike_asio.cpp  aerospike_asio.h  async.h  cl_batch.cpp  cl_cluster.cpp  cl_cluster.h  cl_info.cpp  cl_lookup.cpp  cl_partition.cpp  ev2citrusleaf-internal.h  ev2citrusleaf.cpp  ev2citrusleaf.h  spinlock.cpp  spinlock.h  version.cpp
citrusleaf/: cf_digest.cpp  cf_digest.h  cf_errno.h  cf_log_internal.h  cf_socket.cpp  cf_socket.h  proto.h
examples/: example2.cpp  example_authenticate.cpp
